--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "phase-4-deploying-app-demo",
+  "name": "voter-registration-backend",
   "description": "Build scripts for Heroku",
   "engines": {
-    "node": "16.x"
+    "node": ">= 14"
   },
   "scripts": {
     "build": "npm install --prefix client && npm run build --prefix client",
