--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,7 @@
   },
   "scripts": {
     "start": "PORT=4000 react-scripts start",
-    "build": "react-scripts build",
-    "build-localhost": "PUBLIC_URL=/ react-scripts build",
+    "build": "npm run YOUR_BUILD_SCRIPT",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "homepage": "."
